[c] 016 - align sign in, sign up logo and fix scrollbar
- Align logo in sign in, sign up page to home page logo. - Remove bug: horizontal scrollbar appearing with vertical scrollbar  in sign in, sign up page.  [#182230016](https://www.pivotaltracker.com/story/show/182230016)

--- a/static/css/accounts/signup.css
+++ b/static/css/accounts/signup.css
@@ -1,25 +1,24 @@
 .signup-container {
   font-family: "Mulish", serif;
-  width: 100vw;
   height: max(100vh, 688px);
   background: var(--cool-gray) url(/static/img/Map.png);
   background-position-y: -200px;
 }
-.signup-container .movey-logo {
-  content: url(/static/resources/movey_logo.svg);
+.signup-container .movey-logo-container {
   top: 0;
+  display: flex;
+  align-items: center;
   position: sticky;
+  height: 100px;
   padding: 30px;
 }
-@media screen and (min-width: 844px) and (max-width: 1280px) {
-  .signup-container .movey-logo {
-    padding: 34.5px 100px;
-  }
-}
 @media screen and (max-width: 843px) {
-  .signup-container .movey-logo {
+  .signup-container .movey-logo-container {
     padding: 38px calc((100vw - 236px) / 2) 46px;
   }
+}
+.signup-container .movey-logo-container .movey-logo {
+  content: url(/static/resources/movey_logo.svg);
 }
 .signup-container .signup-card-container {
   margin-top: max(0px, (max(100vh, 688px) - 588px) / 2 - 100px);
